Fix screen size for mobile BUT theres now some funky whitespace and I cant see where it is being introduced

--- a/less/creative.less
+++ b/less/creative.less
@@ -223,7 +223,7 @@ header {
         }
     }
     @media (max-width: 768px) {
-        min-height: 100%;
+        min-height: 50%;
         #headvid{
             display: none !important;
             height: 100%;
